--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         </ul>
     </nav>
     <main>
+        <!-- Did "My Work" before "About" because I personally think that's a better structure for the page -->
         <section id="my-work" class="my-work">
             <section id="mvp" class="card">
                 <a href="https://wolfspiderman.github.io/CSS-Cheatsheet/"><img src="./assets/images/snippets.png"></img></a>
@@ -41,6 +42,7 @@
             <section class="card">
                 <img src="./assets/images/wolfspiderman.jpg">
                 <h3>placeholder</h3>
+                <!-- More projects coming soon -->
             </section>
             <section class="card">
                 <img src="./assets/images/Wedding-Selfie.jpg">
@@ -64,11 +66,12 @@
         <section id="contact" class="contact">
             <h2>Contact me or look at more of my work:</h2>
             <ul>
-                <li><a href="'&#109;ai&#108;&#116;o&#58;W&#37;&#54;F&#108;f%5&#51;&#112;i%64%65r%6&#68;an&#64;&#121;a%68o&#37;6F&#46;c&#37;&#54;&#70;%6D'>WolfS&#112;ider&#109;an&#64;ya&#104;oo&#46;&#99;&#111;m">Email</a></li>
+                <li><a href="#">Email</a></li>
                 <li><a href="https://github.com/WolfSpiderman">Github</a></li>
-                <li>placeholder@linkedin</li>
-                <li>placeholder</li>
+                <li><a href="#">placeholder@linkedin</a></li>
+                <li><a href="#">placeholder</a></li>
             </ul>
+            <!-- More contact links to be added -->
         </section>
     </main>
     <footer>
