turned placeholder images into functioning links to top of page

--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
                 <h3>Coding Beginner Study Guide-HTML, CSS, and Javascript</h3>
             </section>
             <section class="card">
-                <img src="./assets/images/wolfspiderman.jpg">
+                <a href="#"><img src="./assets/images/wolfspiderman.jpg"></a>
                 <h3>placeholder</h3>
                 <!-- More projects coming soon -->
             </section>
             <section class="card">
-                <img src="./assets/images/Wedding-Selfie.jpg">
+                <a href="#"><img src="./assets/images/Wedding-Selfie.jpg"></a>
                 <h3>placeholder</h3>
             </section>
             <section class="card">
