--- a/index.html
+++ b/index.html
@@ -32,24 +32,24 @@
         <!-- Did "My Work" before "About" because I personally think that's a better structure for the page -->
         <section id="my-work" class="my-work">
             <section id="mvp" class="card">
-                <a href="https://wolfspiderman.github.io/CSS-Cheatsheet/"><img src="./assets/images/snippets.png"></img></a>
+                <a href="https://wolfspiderman.github.io/CSS-Cheatsheet/" alt="css snippets cheatsheet page made by me"><img src="./assets/images/snippets.png" alt="css cheatsheet screenshot"></img></a>
                 <h3>CSS Cheatsheet-HTML and CSS</h3>
             </section>
             <section class="card">
-                <a href="https://wolfspiderman.github.io/prework-study-guide/"><img src="./assets/images/prework.png"></img></a>
+                <a href="https://wolfspiderman.github.io/prework-study-guide/" alt="prework study guide made by me"><img src="./assets/images/prework.png" alt="Prework study guide screenshot"></img></a>
                 <h3>Coding Beginner Study Guide-HTML, CSS, and Javascript</h3>
             </section>
             <section class="card">
-                <a href="#"><img src="./assets/images/wolfspiderman.jpg"></a>
+                <a href="#"><img src="./assets/images/wolfspiderman.jpg" alt="spider-man as a werewolf"></a>
                 <h3>placeholder</h3>
                 <!-- More projects coming soon -->
             </section>
             <section class="card">
-                <a href="#"><img src="./assets/images/Wedding-Selfie.jpg"></a>
+                <a href="#"><img src="./assets/images/Wedding-Selfie.jpg" alt="selfie of me before my cousin's wedding"></a>
                 <h3>placeholder</h3>
             </section>
             <section class="card">
-                <a href="https://timesuckpodcast.com"><img src="./assets/images/Dan-and-Lynze.jpg"></img></a>
+                <a href="https://timesuckpodcast.com" alt="Timesuck podcast's homepage"><img src="./assets/images/Dan-and-Lynze.jpg" alt="Me with Dan and Lynze Cummins"></img></a>
                 <h3>Timesuck with Dan Cummins</h3>
             </section>
         </section>
