updated an image

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
                 <h3>placeholder</h3>
             </section>
             <section class="card">
-                <a href="https://timesuckpodcast.com" alt="Timesuck podcast's homepage"><img src="./assets/images/Dan-and-Lynze.jpg" alt="Me with Dan and Lynze Cummins"></img></a>
-                <h3>Timesuck with Dan Cummins</h3>
+                <a href="#"><img src="./assets/images/Dan-and-Lynze.jpg" alt="Me with Dan and Lynze Cummins"></img></a>
+                <h3>placeholder</h3>
             </section>
         </section>
         <section id="about" class="about">
