added TRICKvial MORTsuit, the Phase 1 project, to portfolio

--- a/index.html
+++ b/index.html
@@ -32,25 +32,25 @@
         <!-- Did "My Work" before "About" because I personally think that's a better structure for the page -->
         <section id="my-work" class="my-work">
             <section id="mvp" class="card">
-                <a href="https://wolfspiderman.github.io/CSS-Cheatsheet/" alt="css snippets cheatsheet page made by me"><img src="./assets/images/snippets.png" alt="css cheatsheet screenshot"></img></a>
-                <h3>CSS Cheatsheet-HTML and CSS</h3>
+                <a href="https://wolfspiderman.github.io/t-rick-vial-mort-suit/" alt="coding quiz page made by me"><img src="./assets/images/trickvialmortsuit.png" alt="Rick and Morty fan made character trivia screenshot"></img></a>
+                <h3>Coding Quiz</h3>
             </section>
             <section class="card">
                 <a href="https://wolfspiderman.github.io/prework-study-guide/" alt="prework study guide made by me"><img src="./assets/images/prework.png" alt="Prework study guide screenshot"></img></a>
                 <h3>Coding Beginner Study Guide-HTML, CSS, and Javascript</h3>
             </section>
             <section class="card">
-                <a href="#"><img src="./assets/images/wolfspiderman.jpg" alt="spider-man as a werewolf"></a>
+                <a href="https://wolfspiderman.github.io/css-cheatsheet/" alt="CSS Cheatsheet page made by me"><img src="./assets/images/snippets.png" alt="screenshot of the webpage"></a>
                 <h3>placeholder</h3>
                 <!-- More projects coming soon -->
             </section>
             <section class="card">
-                <a href="#"><img src="./assets/images/Wedding-Selfie.jpg" alt="selfie of me before my cousin's wedding"></a>
-                <h3>placeholder</h3>
+                <a href="https://wolfspiderman.github.io/password-gen/" alt="Password generator page"><img src="./assets/images/PassGen.png" alt="random password generator page screenshot"></a>
+                <h3>Password Generator</h3>
             </section>
             <section class="card">
-                <a href="#"><img src="./assets/images/Dan-and-Lynze.jpg" alt="Me with Dan and Lynze Cummins"></img></a>
-                <h3>placeholder</h3>
+                <a href="https://wolfspiderman.github.io/Code-Quiz/"><img src="./assets/images/codingquiz.png" alt="Coding quiz screenshot"></img></a>
+                <h3></h3>
             </section>
         </section>
         <section id="about" class="about">
