added Caf-Fiend to the portfolio, remmoved prework study guide

--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
         <!-- Did "My Work" before "About" because I personally think that's a better structure for the page -->
         <section id="my-work" class="my-work">
             <section id="mvp" class="card">
-                <a href="https://wolfspiderman.github.io/t-rick-vial-mort-suit/" alt="coding quiz page made by me"><img src="./assets/images/trickvialmortsuit.png" alt="Rick and Morty fan made character trivia screenshot"></img></a>
+                <a href="https://mighty-cove-96789.herokuapp.com/" alt="Caf-fiend homepage"><img src="./assets/images/caf-screenshot.png" alt="screenshot of caf-fiend page"></img></a>
                 <h3>Coding Quiz</h3>
             </section>
             <section class="card">
-                <a href="https://wolfspiderman.github.io/prework-study-guide/" alt="prework study guide made by me"><img src="./assets/images/prework.png" alt="Prework study guide screenshot"></img></a>
+                <a href="https://wolfspiderman.github.io/t-rick-vial-mort-suit/" alt="coding quiz page made by me"><img src="../assets/images/trickvialmortsuit.png" alt="Rick and Morty fan made character trivia screenshot"></img></a>
                 <h3>Coding Beginner Study Guide-HTML, CSS, and Javascript</h3>
             </section>
             <section class="card">
