--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <h3>Coding Quiz</h3>
             </section>
             <section class="card">
-                <a href="https://wolfspiderman.github.io/t-rick-vial-mort-suit/" alt="coding quiz page made by me"><img src="../assets/images/trickvialmortsuit.png" alt="Rick and Morty fan made character trivia screenshot"></img></a>
+                <a href="https://wolfspiderman.github.io/t-rick-vial-mort-suit/" alt="coding quiz page made by me"><img src="./assets/images/trickvialmortsuit.png" alt="Rick and Morty fan made character trivia screenshot"></img></a>
                 <h3>Coding Beginner Study Guide-HTML, CSS, and Javascript</h3>
             </section>
             <section class="card">
