Added LinkedIn link, tweaked styling on the links

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </section>
             <section class="card">
                 <a href="https://wolfspiderman.github.io/css-cheatsheet/" alt="CSS Cheatsheet page made by me"><img src="./assets/images/snippets.png" alt="screenshot of the webpage"></a>
-                <h3>placeholder</h3>
+                <h3>CSS Snippet Cheatsheet</h3>
                 <!-- More projects coming soon -->
             </section>
             <section class="card">
@@ -49,8 +49,8 @@
                 <h3>Password Generator</h3>
             </section>
             <section class="card">
-                <a href="https://wolfspiderman.github.io/Code-Quiz/"><img src="./assets/images/codingquiz.png" alt="Coding quiz screenshot"></img></a>
-                <h3></h3>
+                <a href="https://wolfspiderman.github.io/Code-Quiz/" alt="Coding quiz I made very early"><img src="./assets/images/codingquiz.png" alt="Coding quiz screenshot"></img></a>
+                <h3>Coding Quiz</h3>
             </section>
         </section>
         <section id="about" class="about">
@@ -68,7 +68,7 @@
             <ul>
                 <li><a href="#">Email</a></li>
                 <li><a href="https://github.com/WolfSpiderman">Github</a></li>
-                <li><a href="#">placeholder@linkedin</a></li>
+                <li><a href="https://www.linkedin.com/in/joshua-jenkins-4960aa259/">LinkedIn</a></li>
                 <li><a href="#">placeholder</a></li>
             </ul>
             <!-- More contact links to be added -->
